--- a/src/app/components/board/board.component.html
+++ b/src/app/components/board/board.component.html
@@ -5,7 +5,8 @@
       [color]="getColor(board.line, columns.column)"
       [line]="board.line"
       [column]="columns.column"
-     >
+      [piece]="getPiece(board.line, columns.column)"
+       >
      </app-square>
     </div>
   </div>
