--- a/src/app/components/board/board.component.html
+++ b/src/app/components/board/board.component.html
@@ -1,13 +1,12 @@
 <body>
-  <div *ngFor="let board of boards">
-    <div *ngFor="let columns of board.columns">
+  <div *ngFor="let square of squares">
+    <div *ngFor="let columns of square.columns">
      <app-square
-      [color]="getColor(board.line, columns.column)"
-      [line]="board.line"
+      [color]="getColor(square.line, columns.column)"
+      [line]="square.line"
       [column]="columns.column"
-      [piece]="getPiece(board.line, columns.column)"
-       >
-     </app-square>
+      [piece]="getPiece(square.line, columns.column)"
+      ></app-square>
     </div>
   </div>
 </body>
