--- a/src/app/modules/checkers-game/checkers-game.component.html
+++ b/src/app/modules/checkers-game/checkers-game.component.html
@@ -1,4 +1,4 @@
-<app-board [squares]="squares" [pieces]="pieces"></app-board>
+<app-board [squares]="squares"></app-board>
 
 <button (click)="initGame()">Iniciar jogo</button>
 <button (click)="movePiece(2, 1, 3, 2)">teste</button>
