--- a/src/app/components/board/board.component.html
+++ b/src/app/components/board/board.component.html
@@ -4,13 +4,13 @@
       <app-square
         [square]="{
           line: square.line,
-          columns: square.columns,
-          toMove: false
+          columns: square.columns
         }"
         [column]="{
           id: column.id,
           color: column.color,
-          piece: column.piece
+          piece: column.piece,
+          toMove: false
         }"></app-square>
     </div>
   </div>
